--- a/demo.css
+++ b/demo.css
@@ -29,6 +29,10 @@
 
 
 	/* TEILAUFGABE: Für alle Überschriften Text zentrieren, margin bottom 2rem */
+	p + h1 + h2 + h3 {
+	margin-bottom: 2rem;
+	text-align: center;
+	}
 
 	/* TEILAUFGABE ENDE */
 
